--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
-    "axios": "^1.5.1"
+    "axios": "^1.5.1",
+    "video.js": "^8.6.0"
   }
 }
